--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -5,138 +5,95 @@
 }
 
 body {
-  background: rgb(229, 229, 201);
+  background: rgb(144, 96, 24);
 }
 
-#main {
-  background: url("/logo_square.png") no-repeat;
-  width: 460px;
-  height: 220px;
-  padding: 10px;
-  text-align: right;
-}
-
-section article header {
-  width: 460px;
-  height: 55px;
-  padding: 10px;
+section {
+  position: relative;
+  width: 1000px;
+  background: url(/bg_main.png) repeat-y center top;
+  margin: 0px auto 0px;
+  padding: 0px 15px;
 }
 
 article {
   padding: 10px;
-  color: #333;
 }
 
-section {
-  position: absolute;
-  top: 40px;
-  left: 200px;
-  width: 500px;
-  padding: 10px;
-  padding-bottom: 60px;
-  text-color: blue;
+nav {
+  padding: 0.75em;
+  border-radius: 1.5em 1.5em 1.5em 1.5em;
+  background: rgb(191, 191, 115);
+  float: right;
+  margin: 1.5em 3em 1.5em 1.5em;
 }
 
-section h1 {
-  font-size: 40px;
-  font-weight: normal;
-  line-height: 40px;
-  letter-spacing: -1px;
-  color: #333;
-  -webkit-text-shadow: 1px 1px 1px #eee;
-  -moz-text-shadow: 1px 1px 1px #eee;
-  text-shadow: 1px 1px 1px #eee;
-}
-
-section p {
-  margin: 20px 0;
+p {
+  margin: 0px 0px 1.5em;
+  padding-left: 2em;
+  padding-right: 2em;
+  color: rgb(34, 34, 34);
   font-size: 15px;
   line-height: 20px;
 }
 
-section ul, section ol {
+h1, h2, h3, h4, h5, h6 {
+  padding-left: 1em;
+  padding-right: 2em;
+  font-weight: normal;
+  line-height: 40px;
+  letter-spacing: -1px;
+  color: rgb(34, 34, 34);
+}
+
+h1 {
+  font-size: 2em;
+}
+
+ul, ol {
   list-style-type: none;
   margin: 20px;
 }
 
-section li {
+li {
+  margin: 0px 0px 1.5em;
+  padding-left: 2em;
+  padding-right: 2em;
+  color: rgb(34, 34, 34);
   font-size: 15px;
-  line-height: 20px;
-}
-
-section ul li {
-  list-style-type: square;
-}
-
-nav {
-  position: absolute;
-  top: 40px;
-  left: 740px;
-  width: 200px;
-  padding: 20px 20px 0 0;
-  border-left: 1px solid #ccc;
-  text-align: right;
-}
-
-nav h2 {
-  text-transform: uppercase;
-  font-size: 13px;
-  color: #333;
-  letter-spacing: 1px;
-  line-height: 20px;
-}
-
-nav ul {
-  list-style-type: none;
-  margin: 20px 0;
 }
 
 a:link {
   text-decoration: none;
-  color: rgb(28, 38, 13);
-  font-weight: bold;
+  color: rgb(156, 44, 22);
   margin: 0px;
   padding: 5px;
-  background: ;
-  -webkit-transition: color .5s ease-in-out;
-  -moz-transition: color .5s ease-in-out;
-  transition: color .5s ease-in-out;
 }
 
 a:visited {
-  color: rgb(28, 38, 13);
+  color: rgb(156, 44, 22);
 }
 
 a:hover {
-  color: rgb(96, 134, 50);
+  text-decoration: underline;
 }
 
-.nav {
-  color: red;
-  font-size: 14px;
-  line-height: 20px;
-  background: ;
-  padding: 5px;
-  -webkit-text-shadow: 1px 1px 5px #fff;
-  -moz-text-shadow: 1px 1px 5px #fff;
-  text-shadow: 1px 1px 5px #fff;
+#main {
+  background: url(/bg_header.png) no-repeat center top;
+  width: 1000px;
+  height: 185px;
+  margin: 7px auto 0px;
+  padding: 0px 15px;
+  position: relative;
+  text-align: left;
+  display: block;
 }
 
-footer {
-  background: rgb(229, 229, 201);
-  position: fixed;
-  bottom: 0;
-  left: 200px;
-  width: 760px;
-  height: 40px;
-  color: #682537;
-}
-
-footer h1 {
-  text-transform: uppercase;
-  font-size: 13px;
-  color: #333;
-  line-spacing: 1px;
-  text-align: center;
-  margin: 10px;
+#main-logo {
+  display: block;
+  position: absolute;
+  top: 9px;
+  right: 190px;
+  width: 441px;
+  height: 101px;
 }
