--- a/layouts/default.html
+++ b/layouts/default.html
@@ -5,26 +5,21 @@
     <title>3ofcoins - <%= @item[:title] %></title>
     <link rel="stylesheet" href="/style.css">
 
-    <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
+    <header id="main">
+      <img id="main-logo" title="Return to main page" alt="Three of Coins" src="/header.png"></img>
+    </header>
     <section>
-      <header id="main">
-        <h1>Three of Coins</h1>
-      </header>
+      <nav>
+        <b>We're also</b>
+        <ul>
+          <li><a href="https://twitter.com/3ofCoinsNET"><img src="/logo-twitter.png">@3ofCoinsNET</a> on Twitter</li>
+          <li><a href="https://github.com/3ofcoins/"><img src="/logo-github.png"> 3ofcoins</a> on GitHub</li>
+        </ul>
+      </nav>
       <%= yield %>
     </section>
-      <nav>
-        <ul>
-          <li><a href="/projects/" class="nav">Projects</a></li>
-          <li><a href="/" class="nav">Home</a></li>
-        </ul>
-        <img src="/logo-github.png">
-        <img src="/logo-twitter.png">
-      </nav>
-    <footer>
-      <h1>There's a footer too!</h1>
-    </footer>
   </body>
 </html>
