--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -1,11 +1,7 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: Georgia, Palatino, Times, 'Times New Roman', sans-serif;
-}
-
 body {
   background: rgb(144, 96, 24);
+  line-height: 1.5;
+  font-family: "Warnock Pro", "Goudy Old Style","Palatino","Book Antiqua", Georgia, serif;
 }
 
 section {
@@ -33,8 +29,9 @@ p {
   padding-left: 2em;
   padding-right: 2em;
   color: rgb(34, 34, 34);
-  font-size: 15px;
-  line-height: 20px;
+  line-height: 22px;
+  font-size: 100%;
+  vertical-align: baseline;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -50,17 +47,26 @@ h1 {
   font-size: 2em;
 }
 
+h2 {
+  font-family: Cambria, Georgia, serif;
+  font-size: 2em;
+  margin-bottom: 0.75em;
+}
+
 ul, ol {
-  list-style-type: none;
   margin: 20px;
 }
 
 li {
   margin: 0px 0px 1.5em;
-  padding-left: 2em;
-  padding-right: 2em;
+  padding-left: 0em;
+  padding-right: 0em;
   color: rgb(34, 34, 34);
-  font-size: 15px;
+  font-size: 100%;
+}
+
+nav ul {
+  list-style-type: none;
 }
 
 a:link {
@@ -96,4 +102,53 @@ a:hover {
   right: 190px;
   width: 441px;
   height: 101px;
+}
+
+aside {
+  width: 984px;
+  margin: 0 auto;
+  padding: 25px 8px 1px;
+  text-align: center;
+  background: url(/footer_bg.png) repeat-y;
+  background-color: rgb(245, 209, 91);
+  color: rgb(178, 85, 39);
+}
+
+#main_to_aside {
+  width: 1000px;
+  height: 21px;
+  line-height: 1px;
+  font-size: 1px;
+  margin: 0px auto;
+  padding: 1px 0;
+  background: url(main_to_aside_bg.png);
+  background-color: rgb(132, 177, 46);
+  clear: both;
+}
+
+#above_footer {
+  width: 1000px;
+  height: 29px;
+  margin: 0 auto;
+  padding: 0px;
+  font-size: 88%;
+  color: rgb(68, 68, 68);
+  background: url(above_footer_bg.png);
+}
+
+footer {
+  font-size: 88%;
+  color: rgb(68, 68, 68);
+  text-align: center;
+  padding-top: 1em;
+}
+
+footer a {
+  color: rgb(68, 68, 68);
+  text-decoration: underline;
+}
+
+footer a:hover, footer a:focus, footer a:active {
+  color: rgb(0, 0, 0);
+  text-decoration: underline;
 }
