--- a/layouts/default.html
+++ b/layouts/default.html
@@ -20,6 +20,14 @@
         </ul>
       </nav>
       <%= yield %>
+      <div id="main_to_aside"></div>
+      <aside>
+        <b>View more <a href="http://github.com/3ofcoins/">on github</a> or visit <a href="http://3ofcoins.net">http://3ofcoins.net</a></b>
+      </aside>
     </section>
+    <div id="above_footer"></div>
+    <footer>
+      <p>Copyright &copy; 2007&ndash;2013 <a href="https://prod.ceidg.gov.pl/CEIDG/ceidg.public.ui/SearchDetails.aspx?Id=6098de59-b1f4-4130-96a5-1b31309f9431" target="_blank">Maciej Pasternacki</a></p>
+    </footer>
   </body>
 </html>
