--- a/layouts/default.html
+++ b/layouts/default.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <title>3ofcoins - <%= @item[:title] %></title>
     <link rel="stylesheet" href="/style.css">
-
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
   </head>
   <body>
     <header id="main">
-      <img id="main-logo" title="Return to main page" alt="Three of Coins" src="/header.png"></img>
+      <img id="main-logo" title="Return to main page" alt="Three of Coins" src="/header.png">
     </header>
     <section>
       <nav>
@@ -24,10 +23,10 @@
       <aside>
         <b>View more <a href="http://github.com/3ofcoins/">on github</a> or visit <a href="http://3ofcoins.net">http://3ofcoins.net</a></b>
       </aside>
-    </section>
     <div id="above_footer"></div>
     <footer>
       <p>Copyright &copy; 2007&ndash;2013 <a href="https://prod.ceidg.gov.pl/CEIDG/ceidg.public.ui/SearchDetails.aspx?Id=6098de59-b1f4-4130-96a5-1b31309f9431" target="_blank">Maciej Pasternacki</a></p>
     </footer>
+    </section>
   </body>
 </html>
