Changes after running html validator.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -14,8 +14,8 @@
       <nav>
         <b>We're also</b>
         <ul>
-          <li><a href="https://twitter.com/3ofCoinsNET"><img src="/logo-twitter.png">@3ofCoinsNET</a> on Twitter</li>
-          <li><a href="https://github.com/3ofcoins/"><img src="/logo-github.png"> 3ofcoins</a> on GitHub</li>
+          <li><a href="https://twitter.com/3ofCoinsNET"><img src="/logo-twitter.png" alt="Twitter logo">@3ofCoinsNET</a> on Twitter</li>
+          <li><a href="https://github.com/3ofcoins/"><img src="/logo-github.png" alt="Github logo"> 3ofcoins</a> on GitHub</li>
         </ul>
       </nav>
       <%= yield %>
